# ddid

./: Cargo.toml  seed phrase.txt
src/: sol_connect.rs
src/handlers/: zkphandler.rs
src/zkpgenerate/: mod.rs
zk-login/programs/zk-login/: Cargo.toml
zk-login/programs/zk-login/src/: account.rs  lib.rs
