[package]
name = "rust-axum-postgres-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.3"
chrono = { version = "0.4.24", features = ["serde"] }
dotenv = "0.15.0"
serde = { version = "1.0.159", features = ["derive"] }
sqlx = { version = "0.8.2", default-features = false, features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid", "derive"] }
sqlx-cli = "0.8.2"
tokio = { version = "1.27.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"] }
uuid = { version = "1.3.0", features = ["serde", "v4"] }
byteorder = "1"
bit-vec = "0.4.4"
bellman = "0.13.1"
rand = "0.8"
ff = "0.12.0"
bls12_381 = "0.7.0"
sha2 = "0.10.2"
serde_json = "1.0.117"
curve25519-dalek = "4.1.3"
hex = "0.4.3"
solana-client = "2"
anchor-client = "0.30"
solana-sdk = "2"
ark-ff = "0.5"