[package]
name = "rust-axum-postgres-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.3"
chrono = { version = "0.4.24", features = ["serde"] }
dotenv = "0.15.0"
serde = { version = "1.0.159", features = ["derive"] }
sqlx = { version = "0.8.2", default-features = false, features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid", "derive"] }
sqlx-cli = "0.8.2"
tokio = { version = "1.27.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"] }
uuid = { version = "1.3.0", features = ["serde", "v4"] }
byteorder = "1"
bit-vec = "0.4.4"
bellman = "0.13.1"
rand = "0.8"
ff = "0.12.0"
bls12_381 = "0.7.0"
sha2 = "0.10.4"
serde_json = "1.0.117"
hex = "0.4.3"
anchor-client = { version = "0.30.1 ", features = ["async"] }
base64 = "0.22.1"
bincode = "1.3.3"
borsh = "1.4.0"
solana-address-lookup-table-program = "1.18.15"
solana-client = "1.18.9"
solana-sdk = "1.18.9"
solana-transaction-status = "1.18.15"
solana-program-client = "0.1.0"
anchor-lang = "0.30.1"

[patch.crates-io.aes-gcm-siv]
git = "https://github.com/RustCrypto/AEADs"
rev = "6105d7a5591aefa646a95d12b5e8d3f55a9214ef"

[patch.crates-io.curve25519-dalek]
git = "https://github.com/solana-labs/curve25519-dalek.git"
rev = "c14774464c4d38de553c6ef2f48a10982c1b4801"
