[package]
name = "zk-login"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "zk_login"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
groth16-solana = "0.0.2"
thiserror = "1.0"
ark-serialize = "0.4.2"
ark-ec = "0.4.2"
ark-ff = "0.4.2"
ark-bn254 = "0.4.0"
bls12_381 = "0.7.0"
bellman = "0.13.1"
bincode = "1.3.3"

[dev-dependencies]
ark-std = "0.4.0"
array-bytes = "6.2.2"
serde = "1.0.195"
serde_json = "1.0.111"